--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blind Assistant</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>  
 <body>
     
@@ -33,13 +33,13 @@
 
             <!-- Feature 1: Currency Detection -->
             <div class="feature-box">
-                <img src="currency.jpg" alt="Currency Detection">
+                <img src="{{ url_for('static', filename='currency.jpg') }}" alt="Currency Detection">
                 <button>Currency Detection</button>
             </div>
 
             <!-- Feature 2: Object Detection -->
             <div class="feature-box">
-                <img src="object.jpg" alt="Object Detection">
+                <img src="{{ url_for('static', filename='object.jpg') }}" alt="Object Detection">
                 <button>Object Detection</button>
             </div>
         </section>
@@ -63,7 +63,7 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="{{ url_for('static', filename='script.js') }}" defer></script>
 </body>
 </html>
 
